--- a/style.css
+++ b/style.css
@@ -11,14 +11,16 @@ body {
   min-width: 350px;
   width : auto;
 }
+
 .bkg-grey {
   background-color: aqua;
 }
 
-.name-player{
+.name-player {
   text-align:center;
   font-weight: 200;
   color: #01068a;
+  border: none ;
 }
 
 .dble-line {
@@ -27,8 +29,6 @@ body {
 
 .bi-dice-1, .bi-dice-2, .bi-dice-3, .bi-dice-4, .bi-dice-5 {
   display: none;
-  width : 100px;
-  height : 100px;
 }
 
 .bi-dice-6 {
@@ -46,6 +46,10 @@ body {
   border : 0;
 }
 
+.btn-game:disabled, .btn-game[disabled] {
+  color: lightgray  ;
+}
+
 .counter-pt {
   color:white;
   font-size: 1.5em;
@@ -58,7 +62,8 @@ body {
 
 .counter-title {
   color:red;
-  font-size: 0.8em;
+  font-size: 0.9em;
+  font-weight: 600;
   text-align: center;
 }
 
